--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@ display: none;
                             .elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
                                 font-size: 59px
                             }
-                        </style><span class="elementor-heading-title elementor-size-default" style="color: wheat;" >The Bard AI</span>
+                        </style><span class="elementor-heading-title elementor-size-default" style="color: wheat;" >BARD AI</span>
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-323b54d second-header elementor-widget elementor-widget-heading"
@@ -1060,7 +1060,7 @@ display: none;
                                 <div class="elementor-element elementor-element-848da56 elementor-widget elementor-widget-heading"
                                     data-id="848da56" data-element_type="widget" data-widget_type="heading.default">
                                     <div  class="elementor-widget-container">
-                                        <h2 class="elementor-heading-title elementor-size-default">THE Bard AI</h2>
+                                        <h2 class="elementor-heading-title elementor-size-default">BARD AI</h2>
                                     </div>
                                 </div>
                                 <div class="elementor-element elementor-element-ce32df9 elementor-widget elementor-widget-heading"
