--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@ display: none;
                             .elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
                                 font-size: 59px
                             }
-                        </style><span class="elementor-heading-title elementor-size-default" style="color: wheat;" >Bard AI</span>
+                        </style><span class="elementor-heading-title elementor-size-default" style="color: wheat; text-transform: capitalize;" >Bard AI</span>
                     </div>
                 </div>
                 <div class="elementor-element elementor-element-323b54d second-header elementor-widget elementor-widget-heading"
